--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,10 @@
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script
+			  src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+			  integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+			  crossorigin="anonymous"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
@@ -48,7 +52,7 @@
         <form method="POST" action="/tweets" enctype="application/x-www-form-urlencoded">
           <div class="new-tweet__input">
             <label for="tweet-text">What are you humming about?</label>
-            <textarea name="text" id="tweet-text" rows="1" maxlength="140" required></textarea>
+            <textarea name="text" id="tweet-text" rows="1" required></textarea>
           </div>
           <div class="new-tweet__counter">
             <button type="submit">Tweet</button>
@@ -58,5 +62,6 @@
       </section>
       
     </main>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
   </body>
 </html>
