refactored composer-char-counter

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,15 @@
           </div>
         </form>
       </section>
+
       
+      <section class="old-tweets-container">
+        <article class="tweet">
+          <header></header>
+          <footer></footer>
+        </article>
+
+      </section>
     </main>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
   </body>
