form validation up and running

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
         <form method="POST" action="/tweets" enctype="application/x-www-form-urlencoded">
           <div class="new-tweet__input">
             <label for="tweet-text">What are you humming about?</label>
-            <textarea name="text" id="tweet-text" rows="2" required></textarea>
+            <textarea name="text" id="tweet-text" rows="1" required autofocus></textarea>
           </div>
           <div class="new-tweet__counter">
             <button type="submit">Tweet</button>
