tweaks to css. added icon in nav prompt.

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,10 @@
     <!-- Top nav bar (fixed) -->
     <nav>
       <span id="title">tweeter</span>
-      <span><strong>Write</strong> a new tweet</span>
+      <div class="nav-prompt">
+        <span><strong>Write</strong> a new tweet</span>
+        <i class="fas fa-angle-double-down"></i>
+      </div>
     </nav>
 
     <!-- Page-specific (main) content here -->
