--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,10 @@
   
     <main class="container">
       <section class="new-tweet">
+        <div id="alert" class="hideAlert">
+          <p></p>
+          <button id="alertButton">OK</button>
+        </div>
         <!-- <h2>Compose Tweet</h2> -->
         <form method="POST" action="/tweets" enctype="application/x-www-form-urlencoded">
           <div class="new-tweet__input">
@@ -61,6 +65,7 @@
             <output name="counter" class="counter" for="tweet-text">140</output>
           </div>
         </form>
+
       </section>
 
 
