--- a/public/index.html
+++ b/public/index.html
@@ -49,13 +49,13 @@
     </header>
   
     <main class="container">
-      <section class="new-tweet">
+      <section class="new-tweet new-tweet-hide">
         <div id="alert" class="hideAlert">
           <p></p>
           <button id="alertButton">OK</button>
         </div>
         <!-- <h2>Compose Tweet</h2> -->
-        <form method="POST" action="/tweets" enctype="application/x-www-form-urlencoded">
+        <form method="POST" action="/tweets" enctype="application/x-www-form-urlencoded" class="">
           <div class="new-tweet__input">
             <label for="tweet-text">What are you humming about?</label>
             <textarea name="text" id="tweet-text" rows="1" autofocus></textarea>
