got rid of redundant new-tweet-hide css class

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
     </header>
   
     <main class="container">
-      <section class="new-tweet new-tweet-hide">
+      <section class="new-tweet">
         <div id="alert" class="hideAlert">
           <p></p>
           <button id="alertButton">OK</button>
