--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
           <button id="alertButton">OK</button>
         </div>
         <!-- <h2>Compose Tweet</h2> -->
-        <form method="POST" action="/tweets" enctype="application/x-www-form-urlencoded" class="">
+        <form method="POST" action="/tweets" enctype="application/x-www-form-urlencoded">
           <div class="new-tweet__input">
             <label for="tweet-text">What are you humming about?</label>
             <textarea name="text" id="tweet-text" rows="1" autofocus></textarea>
@@ -74,6 +74,11 @@
        
       </section>
     </main>
+
+    <span class="dot">
+      <i class="fas fa-angle-double-up"></i>
+    </span>
+
     <footer>
       <p>Created for Lighthouse Labs Web Dev Bootcamp By:</p>
       <p><a href="https://github.com/rothavanathan">Romesh Thavanathan</a></p>
