--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- Meta Information -->
     <title>Tweeter - Home Page</title>
-
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
     <!-- External CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -50,6 +50,7 @@
     </header>
   
     <main class="container">
+
       <section class="new-tweet">
         <div id="alert" class="hideAlert">
           <p></p>
@@ -66,13 +67,12 @@
             <output name="counter" class="counter" for="tweet-text">140</output>
           </div>
         </form>
-
       </section>
 
 
-      <section class="old-tweets-container">
-       
+      <section class="old-tweets-container"> 
       </section>
+
     </main>
 
     <span class="dot">
